--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config ormconfig.ts",
     "migration:generate": "npm run typeorm -- migration:generate --connection  --name ",
-    "migration:up": "npm run typeorm migration:run"
+    "migration:up": "npm run typeorm migration:run",
+    "inport-comments": "node cli import-comments"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@squareboat/nest-console": "0.0.4",
+    "fast-xml-parser": "^3.19.0",
     "nestjs-console": "^5.0.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
