--- a/ormconfig.ts.template
+++ b/ormconfig.ts.template
@@ -1,3 +1,5 @@
+import { TypeOrmModuleOptions } from '@nestjs/typeorm';
+
 export const ormConfig: TypeOrmModuleOptions = {
   type: 'postgres',
   host: 'localhost',
@@ -14,4 +16,6 @@ export const ormConfig: TypeOrmModuleOptions = {
   entities: [
     __dirname + '/../**/*.entity{.ts,.js}',
   ],
-}
+};
+
+export default ormConfig;
